--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-share": "^5.1.0",
     "react-sliding-pane": "^7.3.0",
+    "react-transition-group": "^4.4.5",
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
